# flashscenic

./: .gitignore  README.md  pyproject.toml
.github/workflows/: main.yml
docs/: api.md  conf.py  downstream.md  index.md  installation.md  pipeline.md  quickstart.md
docs/apidocs/: index.rst
docs/apidocs/flashscenic/: flashscenic.aucell.md  flashscenic.cistarget.md  flashscenic.data.md  flashscenic.md  flashscenic.modules.md  flashscenic.pipeline.md
flashscenic/: __init__.py  aucell.py  cistarget.py  data.py  modules.py  pipeline.py
tests/: test_aucell_pyscenic_equivalence.py  test_cistarget_gpu.py  test_pipeline_validation.py
